--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     autoDeploy: true
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: "gunicorn wsgi:app --bind 0.0.0.0:$PORT"
+    postDeployCommand: "flask db upgrade"
     envVars:
       - key: FLASK_APP
         value: wsgi.py
